2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: trigger a "caldav-acl-reset"
	notification where the status code returned by the server is >
	399. This enables listeners to take action when the request chain
	is aborted.

2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: trigger the "caldav-acl-loaded"
	notification only when the second address set is received.

2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js,
	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	save preferences as soon as a list has been modified to avoid
	duplication when a crash occurs.

2009-07-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	it may happen that we are returned a card we already have "as new"
	and with a different version number than the one we have. In and
	only in that case, we update the card/list so that we don't lose
	updates.
	* chrome/content/sogo-connector/general/preference.service.addressbook.groupdav.js:
	removed obsolete preferences

	* js/CalDAVAclManager.js: we become a bit more foolprop when an
	XMLHttpRequest fails for a reason or another and delete the
	corresponding entry so that the request can happen again.

2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*chrome/content/sogo-connector/addressbook/preferences.addressbook.groupdav.js:
	removed "display synchronization dialog" from groupdav addressbook
	settings window.
	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	fixed a bug where list downloads would tranmis the tag
	"vcard-download" instead of "list-download", preventing the
	downloaded lists from being created or updated.

2009-06-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js: