@@ -1,3 +1,10 @@
+2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* js/CalDAVAclManager.js: we pass the url of the calendar as data
+	argument on every request, for error management. For errors >= 498,
+	we remove the entry but for errors > 399, we keep it and mark it
+	as lacking ACL support.
+
 2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* js/CalDAVAclManager.js: trigger a "caldav-acl-reset"
